<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.android.justjava.MainActivity">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textCapWords"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/toppings"
        android:textAllCaps="true" />



     <CheckBox
            android:id="@+id/checkbox_whippedcream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whippedcream"
            android:textSize="16sp"
            android:paddingLeft="24dp"

            />

     <CheckBox
         android:id="@+id/checkbox_chocolete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/chocolate"
         android:textSize="16sp"
         android:paddingLeft="24dp"
         android:layout_marginBottom="16dp"
         />


       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity"
        android:textAllCaps="true" />
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_value"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_summery"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/order_summery_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="Rendelés" />
 </LinearLayout>
</ScrollView>

